=== and the other UPGRADE files for older releases.
===
==============================================================================

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.6.0 to Asterisk 13.7.0 ------------
------------------------------------------------------------------------------

chan_sip
------------------
 * The websockets_enabled option has been added to the general section of
   sip.conf.  The option is enabled by default to match the previous behavior.
   The option should be disabled when using res_pjsip_transport_websockets to
   ensure chan_sip will not conflict with PJSIP websockets.

Dialplan Functions
------------------
 * The HOLD_INTERCEPT dialplan function now actually exists in the source tree.
   While support for the events was added in Asterisk 13.4.0, the function
   accidentally never made it in. That function is now present, and will cause
   the 'hold' raised by a channel to be intercepted and converted into an
   event instead.

res_pjsip_outbound_registration
-------------------------------
* A new 'fatal_retry_interval' option has been added to outbound registration.
  When set (default is zero), and upon receiving a failure response to an
  outbound registration, registration is retried at the given interval up to
  'max_retries'.

res_pjsip
------------------
 * The ability to use "like" has been added to the pjsip list and show
   CLI commands.  For instance: CLI> pjsip list endpoints like abc

func_callerid
-------------------
 * CALLERID(pres) is now documented as a valid alternative to setting both
   CALLERID(name-pres) and CALLERID(num-pres) at once.  Some channel drivers,
   like chan_sip, don't make a distinction between the two: they take the
   least public value from name-pres and num-pres.  By using CALLERID(pres)
   for reading and writing, you touch the same combined value in the dialplan.